--- a/lib/views/admin/invite-requests.html
+++ b/lib/views/admin/invite-requests.html
@@ -46,9 +46,9 @@
     <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
 </div>
 
-<div id="outputDiv" class="marginTop marginSides" hidden>
+<div id="outputDiv" hidden>
     <label id="outputLabel" for="output"></label>
-    <div id="output" class="borderSolid padding"></div>
+    <div id="output"></div>
 </div>
 
 <%- include('../end.html'); %>
