--- a/lib/views/login/login.html
+++ b/lib/views/login/login.html
@@ -16,11 +16,11 @@
         <h1><%= title %></h1>
     </header>
     <div class="flexRowWrapResponsive">
-        <p id="message"><%= message %></p>
+        <p id="message" class="preWrap"><%= message %></p>
         <img src="/assets/passkeymajor-svgrepo-com.svg" class="passkeyIconLg" alt="">
     </div>
     <input type="hidden" id="options" value="<%= options %>">
-    <div><button id="login" class="mainAction">Log in</button></div>
+    <div><button id="login" class="mainAction"><%= actionLabel %></button></div>
     <div id="progress" hidden><label>Logging-in: <progress></progress></label></div>
 </section>
 
