--- a/lib/views/admin/users.html
+++ b/lib/views/admin/users.html
@@ -7,52 +7,56 @@
     <header class="centeredText"><h1><%= title %></h1></header>
 </section>
 
-<table id="users" class="fullwidth">
-    <thead>
-        <tr><th>Username</th><th>Contact URL</th><th>Last connected</th><th>Privileges</th></tr>
-    </thead>
-    <tbody>
-    <% for (const user of users) { %>
+<section class="fullwidth">
+    <table id="users" class="fullwidth adaptive">
+        <thead>
+        <tr><th>Username</th><th>Contact URL</th><th>Last logged-in</th><th>Privileges</th></tr>
+        </thead>
+        <tbody>
+        <% for (const user of users) { %>
         <tr>
-            <td><%= user.username %>
+            <td><%= user.username || " " %>
                 <% if (user.privileges) { %>
                 <button data-username="<%= user.username %>" data-contacturl="<%= user.contactURL %>" data-privilegegrant="<%= JSON.stringify(user.privileges) %>" class="floatRight">re-invite</button>
                 <% } %>
             </td>
-            <td><%= user.contactURL?.split(':').join(':​') %></td>
+            <td><%= user.contactURL?.split(':').join(':​') || " " %></td>
             <td><%= user.lastUsed ? new Date(user.lastUsed).toLocaleString().replace(/:\d\d(?!:)/, '') : 'never' %></td>
             <td><%= Object.keys(user.privileges || {}).join(', ') || '«none»' %></td>
         </tr>
-    <% } %>
-    <% if (!users.length) { %>
-    <tr><td colspan="3">No users</td></tr>
-    <% } %>
-    </tbody>
-</table>
+        <% } %>
+        <% if (!users.length) { %>
+        <tr><td colspan="3">No users</td></tr>
+        <% } %>
+        </tbody>
+    </table>
 
-&nbsp;
-<hr>
-&nbsp;
+    &nbsp;
+    <hr>
+    &nbsp;
 
-<%- include('../contact-url.html'); %>
+    <%- include('../contact-url.html'); %>
 
-&nbsp;
-<hr>
-&nbsp;
+    &nbsp;
+    <hr>
+    &nbsp;
 
-<div id="progress" hidden><label>Generating: <progress></progress></label></div>
+    <div id="progress" hidden><label>Generating: <progress></progress></label></div>
 
-<div id="sendFromMeContainer" class="marginTop marginSides centeredText" hidden>
-    <a id="sendFromMe" href="" target="_blank" rel="noreferrer">Send invite from my account</a>
-</div>
+    <div id="sendFromMeContainer" class="marginTop marginSides centeredText" hidden>
+        <a id="sendFromMe" href="" target="_blank" rel="noreferrer">Send invite from my account</a>
+    </div>
 
-<div id="shareContainer" class="marginTop marginSides centeredText" hidden>
-    <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
-</div>
+    <div id="shareContainer" class="marginTop marginSides centeredText" hidden>
+        <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
+    </div>
 
-<div id="outputDiv" class="marginTop marginSides" hidden>
-    <label id="outputLabel" for="output"></label>
-    <div id="output" class="borderSolid padding"></div>
-</div>
+    <div id="outputDiv" hidden>
+        <div class="marginTop marginSides">
+            <label id="outputLabel" for="output"></label>
+        </div>
+        <div id="output"></div>
+    </div>
+</section>
 
 <%- include('../end.html'); %>
