--- a/lib/views/error.html
+++ b/lib/views/error.html
@@ -1,6 +1,6 @@
 <%- include('header.html'); %>
 
-<h2>Something went wrong</h2>
+<h2><%= title %></h2>
 <p class="status"><%= status %></p>
 <p>Please contact the administrator, and include the URL and this message:</p>
 <p class="message"><%= message %></p>
