Fixes layout of invite request page

--- a/lib/views/login/request-invite.html
+++ b/lib/views/login/request-invite.html
@@ -2,10 +2,12 @@
 
 <script type="module" src="<%= basePath %>/assets/contact-url.mjs"></script>
 
-<h2>Request an Invitation</h2>
+<section class="fullwidth centeredText">
+    <h2>Request an Invitation</h2>
 
-<p>How should we contact you?</p>
+    <p>How should we contact you?</p>
 
-<%- include('../contact-url.html'); %>
+    <%- include('../contact-url.html'); %>
+</section>
 
 <%- include('../end.html'); %>
