--- a/lib/views/account/account.html
+++ b/lib/views/account/account.html
@@ -54,7 +54,7 @@
         <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
     </div>
 
-    <div id="outputDiv" hidden>
+    <div id="outputDiv" class="paddingBottom" hidden>
         <label id="outputLabel" for="output"></label>
         <div id="output"></div>
     </div>
