--- a/lib/views/admin/users.html
+++ b/lib/views/admin/users.html
@@ -51,7 +51,7 @@
         <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
     </div>
 
-    <div id="outputDiv" hidden>
+    <div id="outputDiv" class="paddingBottom" hidden>
         <div class="marginTop marginSides">
             <label id="outputLabel" for="output"></label>
         </div>
