Fixes error handling in modular script & layout in invite UI

--- a/lib/views/login/request-invite-success.html
+++ b/lib/views/login/request-invite-success.html
@@ -4,7 +4,7 @@
 <h2>Invitation Requested</h2>
 </header>
 
-<p>Check that clicking this link starts a message to you:</p>
+<p class="centeredText">Check that clicking this link starts a message to you:</p>
 
 <p class="centeredText"><a href="<%= params.contactURL %>"><%= params.contactURL %></a></p>
 
