--- a/lib/views/signup-success.html
+++ b/lib/views/signup-success.html
@@ -6,7 +6,8 @@
   Welcome! &#9786;
 </p>
 <p class="success">
-  Your account's user address is: <em><%= params.username %>@<%= host %></em>
+  Your account's user address is: <br>
+  <code><%= params.username %>@<%= host %></code>
 </p>
 <p class="text-center">
   <a href="https://remotestorage.io/apps/">Explore remoteStorage apps</a>
